crates/test-files/fixtures/compile_errors/call_address_with_wrong_type.fe
contract Foo:
    pub fn foo():
        address(true)
